--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,27 @@
 * {
     margin: 0;
-    padding: 5px;
+    padding: 0;
     box-sizing: border-box;
 }
 
+.clearfix::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+body{
+    background-image: url(https://img.freepik.com/foto-gratis/superficie-textura-madera-fondo-madera-teca_41471-6334.jpg?size=626&ext=jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .container {
-    width: 800px;
-    height: 500px;
-    background-color: gray;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-
+    width: 80vh;
+    margin: 0 auto;
 }
 
-.giallo {
-    width: 100%;
-    height: 100px;
-    position: relative;
-    top: 0;
+header {
     background-color: yellow;
-}
-
-.rosa {
-    width: 200px;
     height: 200px;
-    background-color: pink;
-}
-
-.primo {
-    float: left;
-}
-
-.secondo {
-    float: right;
-}
-main {
-    width: 250px;
-    height: 300px;
-    background-color: violet;
-    position: absolute;
-    left: 400px;
-    transform: translate(-50%);
-}
-
-footer {
-    width: 790px;
-    height: 75px;
-    background: skyblue;
-    position: absolute;
-    left: 5px;
-    bottom: 5px;
 }
